--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -17,3 +17,11 @@ body {
 main {
     flex: 1;
 } */
+.main-app {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+footer {
+    margin-top: auto;
+}
